--- a/api-server/package.json
+++ b/api-server/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-promise-router": "^4.1.1",
@@ -17,6 +18,7 @@
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.5",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^27.0.3",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
