--- a/api-server/package.json
+++ b/api-server/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest src/tests",
+    "test:watch": "jest --watch",
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
@@ -21,10 +23,12 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^27.0.3",
+    "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
     "eslint": "^9.9.0",
     "jest": "^27.4.5",
+    "mongodb-memory-server": "^10.0.0",
     "supertest": "^6.1.6",
     "ts-jest": "^27.1.2",
     "ts-node": "^10.9.2",
