--- a/api-server/package.json
+++ b/api-server/package.json
@@ -22,15 +22,17 @@
     "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/jest": "^27.0.3",
+    "@types/jest": "^27.5.2",
+    "@types/sinon": "^17.0.3",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
     "eslint": "^9.9.0",
-    "jest": "^27.4.5",
+    "jest": "^27.5.1",
     "mongodb-memory-server": "^10.0.0",
+    "sinon": "^18.0.0",
     "supertest": "^6.1.6",
-    "ts-jest": "^27.1.2",
+    "ts-jest": "^27.1.5",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.9.5"
